# Smart-Report-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CICD_GUIDE.md  CI_CD_SETUP_COMPLETE.md  Dockerfile  GPT_SETUP.md  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_gpt.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __version__.py  main.py  report_generator.py
app/templates/: report.html  upload.html
data/: beispiel.csv
scripts/: deploy.bat  deploy.sh  setup.bat  setup.sh
tests/: conftest.py  test_gpt_integration.py  test_main.py  test_report_generator.py
